Changelog
=========

4.2-dev - (unreleased)
----------------------

4.1 - (2011-11-18)
------------------
* Rerelease broken egg  

4.0 - (2011-11-18)
------------------
* Feature: added a way to easily override Plone default ATContentTypes
  widget for relatedItems field. Just add 'eea.relations.default' within your
  zc.buildout include ZCMLs
  [voineali #4232]
* Cleanup: fixed all pylint, pyflakes violations
  [voineali #4232]
* Feature: added upgrade steps
  [voineali #4392]
* Feature: Plone 4.x compatible release
  [voineali #4232]

0.10 - (2011-03-29)
-------------------
* Bug fix: fixed failure if object has no workflow
  [voineali #4217]

0.9 - (2011-02-18)
------------------
* Changed: replaced thickbox with fancybox
  [ichimdav #3773]

0.8 - (2010-12-13)
------------------
* Bug fix: fixed jslint warnings
  [voineali #3821]

0.7 - (2010-11-22)
------------------
* Bug fix: fixed missing end tag found by hudson zptlint
  [voineali #3821]

0.6 - (2010-11-12)
------------------
* Bug fix: fix failing tests
  [voineali #3821]
* Change: added cache metadata to images
  [ghicaale #3667]

0.5 - (2010-11-05)
------------------
* Bug fix: when exporting GS profile, constrain to string the type titles
  [tiberich]

0.4 (2010-09-06)
----------------
* Feature: color links in reference widget according to their state.
  [tiberich #3561]
* Feature: added default location field to content type entries
  [tiberich #3544]

0.3 (2010-08-16)
----------------
* Change: set permissions for reference popups to View instead of ModifyContent
  [tiberich #3525]

0.2 (2010-06-16)
------------------
* Change: changed AutoRelations API to return a list of tabs (labeled brains)
  [#3298 voineali]

0.1 (2010-06-07)
----------------
* Initial release
  [voineali]
