@@ -1,4 +1,4 @@
-<table class="listing" summary="Content Types" style="width: 100%; margin-top: 0px">
+<table class="listing" summary="Content Types" style="width: 100%; margin-top: 0px; border: none">
   <thead>
     <tr>
       <th i18n:translate="">Relation</th>
